어제보다 발전하지 못한 하루 ㅜㅜ

--- a/HJ/tempWin.ipynb
+++ b/HJ/tempWin.ipynb
@@ -3,25 +3,6 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "defaultdict(list,\n",
-       "            {1: [[2, 2], [4, 1], [3, 5]],\n",
-       "             2: [[3, 3], [4, 2]],\n",
-       "             4: [[3, 3], [5, 1]],\n",
-       "             3: [[2, 3], [6, 5]],\n",
-       "             6: [],\n",
-       "             5: [[3, 1], [6, 2]]})"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
     "def mkgraph(ss):\n",
     "    from collections import defaultdict\n",
@@ -35,24 +16,30 @@
     "]\n",
     "# dijkstra(mkgraph(costs),1)\n",
     "mkgraph(costs)"
-   ]
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "defaultdict(list,\n",
+       "            {1: [[2, 2], [4, 1], [3, 5]],\n",
+       "             2: [[3, 3], [4, 2]],\n",
+       "             4: [[3, 3], [5, 1]],\n",
+       "             3: [[2, 3], [6, 5]],\n",
+       "             6: [],\n",
+       "             5: [[3, 1], [6, 2]]})"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 2
+    }
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 14,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[1, 4, 5]"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
     "from heapq import *\n",
     "def dijkstra(graph,start):\n",
@@ -86,31 +73,24 @@
     "graph = mkgraph(costs)\n",
     "dist, frtable = dijkstra(graph,1)\n",
     "getRoute(frtable,1,5)"
-   ]
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "[1, 4, 5]"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 14
+    }
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 19,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{1: 0, 2: 1, 3: 1, 4: 1, 5: 2} {1: 1, 2: 1, 3: 1, 4: 1, 5: 3}\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "3"
-      ]
-     },
-     "execution_count": 19,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
     "from collections import defaultdict\n",
     "from heapq import *\n",
@@ -149,31 +129,31 @@
     "\n",
     "links = [[1,2],[1,3],[1,4],[2,4],[3,4],[3,5],[4,5]]\n",
     "solution(links, 1, 5, 4)"
-   ]
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "{1: 0, 2: 1, 3: 1, 4: 1, 5: 2} {1: 1, 2: 1, 3: 1, 4: 1, 5: 3}\n"
+     ]
+    },
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 19
+    }
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 34,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[0, 1000000000, 1, 1000000000], [1000000000, 0, 1000000000, 1], [1, 1000000000, 0, 1000000000], [1000000000, 1, 1000000000, 0]]\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "-1"
-      ]
-     },
-     "execution_count": 34,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
     "# 미래도시 (중간에 거쳐가는 장소 발생)\n",
     "def solution(links,start,mid,end):\n",
@@ -209,31 +189,31 @@
     "links = [[4,2],[1,3],[2,4]]\n",
     "#x,k = 3,4 # k를 거쳐서 x를 가는것 \n",
     "solution(links, 1, 4, 3)"
-   ]
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "[[0, 1000000000, 1, 1000000000], [1000000000, 0, 1000000000, 1], [1, 1000000000, 0, 1000000000], [1000000000, 1, 1000000000, 0]]\n"
+     ]
+    },
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "-1"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 34
+    }
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 46,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{0: 1000000000, 1: 0, 2: 4, 3: 2} {0: False, 1: 1, 2: 1, 3: 1}\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "4"
-      ]
-     },
-     "execution_count": 46,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
     "# 전보\n",
     "n,m,c=3,2,1 # 도시개수,통로개수,메시지를보내고자하는도시C (출발지)\n",
@@ -275,27 +255,45 @@
     "    return max(list(map(lambda x : dist[x], cities)))\n",
     "    # return cities\n",
     "solution(links,n,m,c)"
-   ]
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "{0: 1000000000, 1: 0, 2: 4, 3: 2} {0: False, 1: 1, 2: 1, 3: 1}\n"
+     ]
+    },
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "4"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 46
+    }
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "source": [],
    "outputs": [],
-   "source": []
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "source": [],
    "outputs": [],
-   "source": []
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 47,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "# n,t,m,timetable#\tanswer\n",
     "n,t,m,timetable=1,1,5,[\"08:00\", \"08:01\", \"08:02\", \"08:03\"]#\"09:00\"\n",
@@ -304,55 +302,35 @@
     "# n,t,m,timetable=1,1,5,[\"00:01\", \"00:01\", \"00:01\", \"00:01\", \"00:01\"]#\"00:00\"\n",
     "# n,t,m,timetable=1,1,1,[\"23:59\"]#\"09:00\"\n",
     "# n,t,m,timetable=10,60,45,[\"23:59\",\"23:59\", \"23:59\", \"23:59\", \"23:59\", \"23:59\", \"23:59\", \"23:59\", \"23:59\", \"23:59\", \"23:59\", \"23:59\", \"23:59\", \"23:59\", \"23:59\", \"23:59\"]#\"18:00\""
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 65,
-   "metadata": {},
+   "source": [
+    "from datetime import datetime\n",
+    "a=datetime(2020,1,1,18,30)-datetime(2020,1,1,17,30)\n",
+    "a.seconds"
+   ],
    "outputs": [
     {
+     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "3600"
       ]
      },
-     "execution_count": 65,
      "metadata": {},
-     "output_type": "execute_result"
+     "execution_count": 65
     }
    ],
-   "source": [
-    "from datetime import datetime\n",
-    "a=datetime(2020,1,1,18,30)-datetime(2020,1,1,17,30)\n",
-    "a.seconds"
-   ]
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 134,
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "deque([])\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "'18:00'"
-      ]
-     },
-     "execution_count": 134,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
     "from collections import deque\n",
     "def solution(n,t,m,timetable):\n",
@@ -395,24 +373,33 @@
     "# n,t,m,timetable=1,1,1,[\"23:59\"]#\"09:00\"\n",
     "n,t,m,timetable=10,60,45,[\"23:59\",\"23:59\", \"23:59\", \"23:59\", \"23:59\", \"23:59\", \"23:59\", \"23:59\", \"23:59\", \"23:59\", \"23:59\", \"23:59\", \"23:59\", \"23:59\", \"23:59\", \"23:59\"]#\"18:00\"\n",
     "solution(n,t,m,timetable)"
-   ]
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "deque([])\n"
+     ]
+    },
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "'18:00'"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 134
+    }
+   ],
+   "metadata": {
+    "tags": []
+   }
   },
   {
    "cell_type": "code",
    "execution_count": 9,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "([0, 1, 2, 3, 4, 5], {'a': 0, 'b': 1, 'c': 2, 'f': 3, 'g': 4, 't': 5})"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
     "def solution(stats):\n",
     "    def check(stats):\n",
@@ -432,24 +419,24 @@
     "    return parents, sets\n",
     "stats = ['ab','bc','ca','fg','gt']\n",
     "solution(stats)"
-   ]
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "([0, 1, 2, 3, 4, 5], {'a': 0, 'b': 1, 'c': 2, 'f': 3, 'g': 4, 't': 5})"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 9
+    }
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 13,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['NO', 'NO', 'YES']"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
     "# 이코테 - 팀결성\n",
     "n,teams = 7,[[0,1,3],[1,1,7],[0,7,6],[1,7,1],[0,3,7],[0,4,2],[0,1,1],[1,1,1]]\n",
@@ -479,36 +466,24 @@
     "    return answer\n",
     "\n",
     "solution()"
-   ]
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "['NO', 'NO', 'YES']"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 13
+    }
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 43,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "6 4 1\n",
-      "3 2 1\n",
-      "1 6 2\n",
-      "2 5 2\n",
-      "1 3 2\n",
-      "6 7 4\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "8"
-      ]
-     },
-     "execution_count": 43,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
     "# 이코테 - 도시분할계획 (300p)\n",
     "# def mkgraph(roads):\n",
@@ -546,32 +521,36 @@
     "# 집의 그룹을 2개로 나눔 (각 그룹내 집은 서로 오갈수있는 경로가 존재, 각 그룹 집들 사이의 최소 경로로 )\n",
     "n,m,roads=7,12,[[1,2,3],[1,3,2],[3,2,1],[2,5,2],[3,4,4],[7,3,6],[5,1,5],[1,6,2],[6,4,1],[6,5,3],[4,5,3],[6,7,4]]\n",
     "solution(n,m,roads)"
-   ]
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "6 4 1\n",
+      "3 2 1\n",
+      "1 6 2\n",
+      "2 5 2\n",
+      "1 3 2\n",
+      "6 7 4\n"
+     ]
+    },
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "8"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 43
+    }
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 53,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[1, 2, 5, 3, 6, 4, 7]\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "([0, 0, 0, 0, 0, 0, 0, 0],\n",
-       " {0: [], 1: [2, 5], 2: [3, 6], 3: [4], 4: [7], 5: [6], 6: [4], 7: []})"
-      ]
-     },
-     "execution_count": 53,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
     "from collections import deque\n",
     "# Topology Sort (위상정렬)\n",
@@ -606,24 +585,32 @@
     "\n",
     "\n",
     "Topology_Sort(nodes,edges)"
-   ]
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "[1, 2, 5, 3, 6, 4, 7]\n"
+     ]
+    },
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "([0, 0, 0, 0, 0, 0, 0, 0],\n",
+       " {0: [], 1: [2, 5], 2: [3, 6], 3: [4], 4: [7], 5: [6], 6: [4], 7: []})"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 53
+    }
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 78,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[10, 20, 14, 18, 17]"
-      ]
-     },
-     "execution_count": 78,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
     "# 이코테 - 커리큘럼 (303p)\n",
     "# 강의시간, 선수과목s, -1 (끝)\n",
@@ -659,46 +646,24 @@
     "                    q.append(i)\n",
     "    return results[1:]\n",
     "solution(N,subjects)\n"
-   ]
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "[10, 20, 14, 18, 17]"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 78
+    }
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 91,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1 start\n",
-      "1\n",
-      "2 start\n",
-      "2\n",
-      "1\n",
-      "3 start\n",
-      "3\n",
-      "1\n",
-      "4 start\n",
-      "4\n",
-      "3\n",
-      "1\n",
-      "5 start\n",
-      "5\n",
-      "3\n",
-      "[0, 10, 20, 14, 28, 17]\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "({1: [], 2: [1], 3: [1], 4: [3, 1], 5: [3]}, [0, 10, 10, 4, 4, 3])"
-      ]
-     },
-     "execution_count": 91,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
     "def solution(N,subjects): # 이코테 커리큘럼 달리풀어보기 -> 오답됨..\n",
     "    def dfs_st(graph, costs, start):\n",
@@ -732,33 +697,46 @@
     "    print(answers)\n",
     "    return graph, costs\n",
     "solution(N,subjects)\n"
-   ]
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "1 start\n",
+      "1\n",
+      "2 start\n",
+      "2\n",
+      "1\n",
+      "3 start\n",
+      "3\n",
+      "1\n",
+      "4 start\n",
+      "4\n",
+      "3\n",
+      "1\n",
+      "5 start\n",
+      "5\n",
+      "3\n",
+      "[0, 10, 20, 14, 28, 17]\n"
+     ]
+    },
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "({1: [], 2: [1], 3: [1], 4: [3, 1], 5: [3]}, [0, 10, 10, 4, 4, 3])"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 91
+    }
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 68,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "deque([]) [[6, 2], [9, 1]] 3\n",
-      "deque([]) [[9, 1]] 9\n",
-      "deque([]) [] 18\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "9"
-      ]
-     },
-     "execution_count": 68,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
     "from heapq import *\n",
     "from collections import deque\n",
@@ -791,21 +769,95 @@
     "# jobs=[[24, 10], [28, 39], [43, 20], [37, 5], [47, 22], [20, 47], [15, 34], [15, 2], [35, 43], [26, 1]]\n",
     "jobs=[[0,3],[1,9],[2,6]]\n",
     "solution(jobs)"
-   ]
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "deque([]) [[6, 2], [9, 1]] 3\n",
+      "deque([]) [[9, 1]] 9\n",
+      "deque([]) [] 18\n"
+     ]
+    },
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "9"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 68
+    }
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "source": [],
    "outputs": [],
-   "source": []
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "source": [],
    "outputs": [],
-   "source": []
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "source": [
+    "# https://programmers.co.kr/learn/courses/30/lessons/12904\n",
+    "# 프로그래머스 가장긴펠린드롬\n",
+    "\n",
+    "def solution(s):\n",
+    "    n=len(s)\n",
+    "    if n==1: return 1\n",
+    "    elif ispalin(s) : return len(s)\n",
+    "    # s,e = 0,1\n",
+    "    maxlen=1\n",
+    "    # p=0\n",
+    "    for i in range(len(s)-1):\n",
+    "        print('i : ',i, s[i])\n",
+    "        p=1\n",
+    "        while ispalin(s[i:i+p]):\n",
+    "            print('\\tp : ',p)\n",
+    "            p+=1\n",
+    "        maxlen = max(maxlen, len(s[i:i+p]))\n",
+    "    return maxlen\n",
+    "\n",
+    "def ispalin(ss):\n",
+    "    p=0\n",
+    "    while p < len(ss)//2:\n",
+    "        if ss[p]==ss[-1-p]:\n",
+    "            p+=1\n",
+    "        else:\n",
+    "            return False\n",
+    "    return True\n",
+    "\n",
+    "s = 'abcdcba'\n",
+    "# s = 'abacde'\n",
+    "solution(s)\n",
+    "# ispalin('aaa')\n",
+    "# 5//2"
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "7"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 36
+    }
+   ],
+   "metadata": {}
   }
  ],
  "metadata": {
