--- a/HJ/210508_카카오_채용연계형인턴쉽.ipynb
+++ b/HJ/210508_카카오_채용연계형인턴쉽.ipynb
@@ -1,32 +1,11 @@
 {
- "metadata": {
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.8.5"
-  },
-  "orig_nbformat": 2,
-  "kernelspec": {
-   "name": "python385jvsc74a57bd039a3f6769e595a50e593a296d8b0c78e5171348aaba449e974344d6732d07a14",
-   "display_name": "Python 3.8.5 64-bit ('base': conda)"
-  }
- },
- "nbformat": 4,
- "nbformat_minor": 2,
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "# 1번"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
@@ -34,14 +13,14 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "'1478'"
       ]
      },
+     "execution_count": 5,
      "metadata": {},
-     "execution_count": 5
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -56,11 +35,11 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "# 2번"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
@@ -68,7 +47,6 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "[['POOOP', 'OXXOX', 'OPXPX', 'OOXOX', 'POXXP'],\n",
@@ -78,8 +56,9 @@
        " ['PXPXP', 'XPXPX', 'PXPXP', 'XPXPX', 'PXPXP']]"
       ]
      },
+     "execution_count": 6,
      "metadata": {},
-     "execution_count": 6
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -93,14 +72,14 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "[1, 0, 1, 1, 1]"
       ]
      },
+     "execution_count": 48,
      "metadata": {},
-     "execution_count": 48
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -153,11 +132,11 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "# 3번"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
@@ -165,14 +144,14 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "[1, 2, 'd', 3, 4, 5]"
       ]
      },
+     "execution_count": 51,
      "metadata": {},
-     "execution_count": 51
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -187,14 +166,14 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "'OOXOXOOO'"
       ]
      },
+     "execution_count": 85,
      "metadata": {},
-     "execution_count": 85
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -214,7 +193,7 @@
     "    # print(now, db)\n",
     "    for do in cmd:\n",
     "        if do[0]=='D':\n",
-    "            now += int(do.spli t()[1])\n",
+    "            now += int(do.split()[1])\n",
     "\n",
     "        elif do[0]=='U':\n",
     "            now -= int(do.split()[1])\n",
@@ -244,6 +223,21 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['A', 'B', 0, 'C', 'D', 'E', 'F', 'G', 'H']"
+      ]
+     },
+     "execution_count": 58,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# []\n",
     "# chr(64)\n",
@@ -251,21 +245,6 @@
     "pp = [chr(i) for i in range(65,65+8)]\n",
     "pp.insert(2,0)\n",
     "pp"
-   ],
-   "cell_type": "code",
-   "metadata": {},
-   "execution_count": 58,
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": [
-       "['A', 'B', 0, 'C', 'D', 'E', 'F', 'G', 'H']"
-      ]
-     },
-     "metadata": {},
-     "execution_count": 58
-    }
    ]
   },
   {
@@ -276,11 +255,11 @@
    "source": []
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "# 4번"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
@@ -288,21 +267,23 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
-      "1\n3\n2\n"
+      "1\n",
+      "3\n",
+      "2\n"
      ]
     },
     {
-     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "defaultdict(list, {2: [[1, 1], [3, 1]], 4: [[2, 1]]})"
       ]
      },
+     "execution_count": 134,
      "metadata": {},
-     "execution_count": 134
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -344,14 +325,14 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "(defaultdict(list, {1: [[2, 1]], 3: [[2, 1]], 2: [[4, 1]]}), [2, 3])"
       ]
      },
+     "execution_count": 139,
      "metadata": {},
-     "execution_count": 139
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -364,9 +345,9 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "error",
      "ename": "SyntaxError",
      "evalue": "non-default argument follows default argument (<ipython-input-147-14594a5ca684>, line 2)",
+     "output_type": "error",
      "traceback": [
       "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-147-14594a5ca684>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    def dfs(graph,st=1, fr=1 , money):\u001b[0m\n\u001b[0m            ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m non-default argument follows default argument\n"
      ]
@@ -417,14 +398,14 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "[[2, 1]]"
       ]
      },
+     "execution_count": 117,
      "metadata": {},
-     "execution_count": 117
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -432,11 +413,11 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "# 5번"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
@@ -444,7 +425,6 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "[[-1, -1],\n",
@@ -461,8 +441,9 @@
        " [-1, -1]]"
       ]
      },
+     "execution_count": 149,
      "metadata": {},
-     "execution_count": 149
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -478,14 +459,14 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "40"
       ]
      },
+     "execution_count": 234,
      "metadata": {},
-     "execution_count": 234
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -542,14 +523,14 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "30"
       ]
      },
+     "execution_count": 233,
      "metadata": {},
-     "execution_count": 233
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -562,7 +543,6 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "(dict_keys([4, 5, 6, 7, 8, 9]),\n",
@@ -575,8 +555,9 @@
        "              9: [7, 4]}))"
       ]
      },
+     "execution_count": 203,
      "metadata": {},
-     "execution_count": 203
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -589,8 +570,8 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
       "0\n"
      ]
@@ -616,5 +597,21 @@
    "outputs": [],
    "source": []
   }
- ]
+ ],
+ "metadata": {
+  "interpreter": {
+   "hash": "cb21448086e1b039f0143f4b6f3949a0ab18b782485cd082e49e693fdc0e34f1"
+  },
+  "kernelspec": {
+   "display_name": "Python 3.9.4 64-bit ('base': conda)",
+   "name": "python3"
+  },
+  "language_info": {
+   "name": "python",
+   "version": ""
+  },
+  "orig_nbformat": 2
+ },
+ "nbformat": 4,
+ "nbformat_minor": 2
 }
