2021카카오인턴쉽5번 헬게이트..

--- a/HJ/tempMAC.ipynb
+++ b/HJ/tempMAC.ipynb
@@ -825,6 +825,101 @@
     }
    ],
    "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "source": [
+    "# k : 나눌 그룹 수, num:각시험장 응시자수배열, links: 시험장연결상태2차원\n",
+    "# from collections import defaultdict\n",
+    "from heapq import *\n",
+    "\n",
+    "def solution(k,num,links):\n",
+    "    weights=[]\n",
+    "    temp=[]\n",
+    "    for i,link in enumerate(links):\n",
+    "        wet=num[i]\n",
+    "        stack=link[:]\n",
+    "        while stack:\n",
+    "            now=stack.pop()\n",
+    "            if now==-1:\n",
+    "                continue\n",
+    "            else:\n",
+    "                wet+=num[now]\n",
+    "                stack.extend(links[now])\n",
+    "        heappush(weights,[-wet,i])\n",
+    "        temp.append(wet)\n",
+    "    temp.append(0)\n",
+    "\n",
+    "    for i in range(k-1):\n",
+    "        wt , now = heappop(weights)\n",
+    "        print(wt,now,weights)\n",
+    "        maxs=[]\n",
+    "        for ch in links[now]:\n",
+    "            if ch==-1:\n",
+    "                continue\n",
+    "            else:\n",
+    "                maxs.append(temp[ch])\n",
+    "        new_weight = wt+max(maxs)\n",
+    "        # new_weight = wt + max(list(map(lambda x : temp[x], links[now])))\n",
+    "        heappush(weights,[new_weight,now])\n",
+    "    \n",
+    "    return weights\n",
+    "    return -weights[0][0]\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "k=3\n",
+    "num=[12, 30, 1, 8, 8, 6, 20, 7, 5, 10, 4, 1]\n",
+    "links=[[-1, -1], [-1, -1], [-1, -1], [-1, -1], [8, 5], [2, 10], [3, 0], [6, 1], [11, -1], [7, 4], [-1, -1], [-1, -1]]#40\n",
+    "# solution(k,num,links)\n",
+    "# solution(1,[6, 9, 7, 5],[[-1, -1], [-1, -1], [-1, 0], [2, 1]])\n",
+    "# solution(2,[6, 9, 7, 5],[[-1, -1], [-1, -1], [-1, 0], [2, 1]])\n",
+    "solution(4,[6, 9, 7, 5],[[-1, -1], [-1, -1], [-1, 0], [2, 1]])"
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "-27 3 [[-13, 2], [-6, 0], [-9, 1]]\n",
+      "-14 3 [[-13, 2], [-6, 0], [-9, 1]]\n",
+      "-13 2 [[-9, 1], [-6, 0], [-1, 3]]\n"
+     ]
+    },
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "[[-9, 1], [-7, 2], [-1, 3], [-6, 0]]"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 70
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "source": [
+    "list(filter(lambda x: x, list(map(lambda x : x+1 if x>0 else None, [1,2,3,0]))))"
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "[2, 3, 4]"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 68
+    }
+   ],
+   "metadata": {}
   }
  ],
  "metadata": {
