2021카카오인턴쉽_거리두기

--- a/HJ/210508_카카오_채용연계형인턴쉽.ipynb
+++ b/HJ/210508_카카오_채용연계형인턴쉽.ipynb
@@ -2,27 +2,14 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "# 1번"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'1478'"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
     "s = 'one4seveneight'\n",
     "def replacefunc(s):\n",
@@ -32,21 +19,38 @@
     "        ans = ans.replace(v , str(i))\n",
     "    return ans\n",
     "replacefunc(s)"
-   ]
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "'1478'"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 5
+    }
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "# 2번"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {},
+   "source": [
+    "places=[[\"POOOP\", \"OXXOX\", \"OPXPX\", \"OOXOX\", \"POXXP\"], [\"POOPX\", \"OXPXP\", \"PXXXO\", \"OXXXO\", \"OOOPP\"], [\"PXOPX\", \"OXOXP\", \"OXPXX\", \"OXXXP\", \"POOXX\"], [\"OOOXX\", \"XOOOX\", \"OOOXX\", \"OXOOX\", \"OOOOO\"], [\"PXPXP\", \"XPXPX\", \"PXPXP\", \"XPXPX\", \"PXPXP\"]]\n",
+    "places"
+   ],
    "outputs": [
     {
+     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "[['POOOP', 'OXXOX', 'OPXPX', 'OOXOX', 'POXXP'],\n",
@@ -56,33 +60,17 @@
        " ['PXPXP', 'XPXPX', 'PXPXP', 'XPXPX', 'PXPXP']]"
       ]
      },
-     "execution_count": 6,
      "metadata": {},
-     "output_type": "execute_result"
+     "execution_count": 6
     }
    ],
-   "source": [
-    "places=[[\"POOOP\", \"OXXOX\", \"OPXPX\", \"OOXOX\", \"POXXP\"], [\"POOPX\", \"OXPXP\", \"PXXXO\", \"OXXXO\", \"OOOPP\"], [\"PXOPX\", \"OXOXP\", \"OXPXX\", \"OXXXP\", \"POOXX\"], [\"OOOXX\", \"XOOOX\", \"OOOXX\", \"OXOOX\", \"OOOOO\"], [\"PXPXP\", \"XPXPX\", \"PXPXP\", \"XPXPX\", \"PXPXP\"]]\n",
-    "places"
-   ]
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 48,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[1, 0, 1, 1, 1]"
-      ]
-     },
-     "execution_count": 48,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
+    "### 80점짜리 답안\n",
     "def check(room,i,j,fr,cnt):\n",
     "    if cnt ==3: return True\n",
     "    checklist=[[i-1,j],[i+1,j],[i,j-1],[i,j+1]]\n",
@@ -128,54 +116,106 @@
     "#     break\n",
     "# checkrooms(places[1])\n",
     "solution(places)\n",
-    "\n"
-   ]
+    "###\n"
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "[1, 0, 1, 1, 1]"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 48
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "source": [
+    "###210927 다시풀이 100점짜리 답안\n",
+    "def solution(places):\n",
+    "    ans=[]\n",
+    "    global dx, dy\n",
+    "    dx=[0,0,1,-1]\n",
+    "    dy=[1,-1,0,0]\n",
+    "    for place in places:\n",
+    "        ans.append(check(place))\n",
+    "    return ans\n",
+    "def check(place):\n",
+    "    for i in range(5):\n",
+    "        for j in range(5):\n",
+    "            if place[i][j]=='P':\n",
+    "                try:\n",
+    "                    assert isManhatton(place,[i,j],[i,j+1])\n",
+    "                    assert isManhatton(place,[i,j],[i+1,j])\n",
+    "                    assert isManhatton(place,[i,j],[i,j-1])\n",
+    "                    assert isManhatton(place,[i,j],[i-1,j])\n",
+    "                except:\n",
+    "                    return 0\n",
+    "            else: continue\n",
+    "    return 1\n",
+    "def isManhatton(place, fr,to):# fr : 어디서왔는지 , to : 동서남북 중 어디서 3방향체크할지\n",
+    "    global dx, dy\n",
+    "    x,y=to\n",
+    "    #to check\n",
+    "    if x<0 or x>=5 or y<0 or y>=5: return True #가장자리라면? 검사ㄴㄴ\n",
+    "    else:\n",
+    "        if place[x][y]=='X': return True\n",
+    "        elif place[x][y]=='P':return False\n",
+    "\n",
+    "        #to 부터 3방향 체크\n",
+    "        else:\n",
+    "            for i in range(4):\n",
+    "                nx = x+dx[i]\n",
+    "                if nx<0 or nx>=5 : continue\n",
+    "\n",
+    "                ny = y+dy[i]\n",
+    "                if ny<0 or ny>=5 : continue\n",
+    "                if [nx,ny]==fr: continue\n",
+    "\n",
+    "                if place[nx][ny]=='P':\n",
+    "                    return False\n",
+    "        return True\n"
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "# 3번"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 51,
-   "metadata": {},
+   "source": [
+    "tmp = [1,2,3,4,5,]\n",
+    "tmp.insert(2,'d')\n",
+    "tmp"
+   ],
    "outputs": [
     {
+     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "[1, 2, 'd', 3, 4, 5]"
       ]
      },
-     "execution_count": 51,
      "metadata": {},
-     "output_type": "execute_result"
+     "execution_count": 51
     }
    ],
-   "source": [
-    "tmp = [1,2,3,4,5,]\n",
-    "tmp.insert(2,'d')\n",
-    "tmp"
-   ]
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 85,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'OOXOXOOO'"
-      ]
-     },
-     "execution_count": 85,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
     "n=8\n",
     "k=2\n",
@@ -220,24 +260,24 @@
     "            answer+='X'\n",
     "    return answer\n",
     "solution(n,k,cmd)\n"
-   ]
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "'OOXOXOOO'"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 85
+    }
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 58,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['A', 'B', 0, 'C', 'D', 'E', 'F', 'G', 'H']"
-      ]
-     },
-     "execution_count": 58,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
     "# []\n",
     "# chr(64)\n",
@@ -245,47 +285,38 @@
     "pp = [chr(i) for i in range(65,65+8)]\n",
     "pp.insert(2,0)\n",
     "pp"
-   ]
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "['A', 'B', 0, 'C', 'D', 'E', 'F', 'G', 'H']"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 58
+    }
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "source": [],
    "outputs": [],
-   "source": []
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "# 4번"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 134,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1\n",
-      "3\n",
-      "2\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "defaultdict(list, {2: [[1, 1], [3, 1]], 4: [[2, 1]]})"
-      ]
-     },
-     "execution_count": 134,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
     "from collections import defaultdict\n",
     "roads=[[1, 2, 1], [3, 2, 1], [2, 4, 1]]\n",
@@ -317,42 +348,53 @@
     "\n",
     "\n",
     "reverse(graph,2)\n"
-   ]
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "1\n",
+      "3\n",
+      "2\n"
+     ]
+    },
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "defaultdict(list, {2: [[1, 1], [3, 1]], 4: [[2, 1]]})"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 134
+    }
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 139,
-   "metadata": {},
+   "source": [
+    "graph, traps"
+   ],
    "outputs": [
     {
+     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "(defaultdict(list, {1: [[2, 1]], 3: [[2, 1]], 2: [[4, 1]]}), [2, 3])"
       ]
      },
-     "execution_count": 139,
      "metadata": {},
-     "output_type": "execute_result"
+     "execution_count": 139
     }
    ],
-   "source": [
-    "graph, traps"
-   ]
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 147,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "non-default argument follows default argument (<ipython-input-147-14594a5ca684>, line 2)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-147-14594a5ca684>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    def dfs(graph,st=1, fr=1 , money):\u001b[0m\n\u001b[0m            ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m non-default argument follows default argument\n"
-     ]
-    }
-   ],
    "source": [
     "# graph\n",
     "def dfs(graph,st=1, fr=1 , money):\n",
@@ -368,13 +410,22 @@
     "\n",
     "dfs(graph, st=1, fr=1, money=0)    \n",
     "\n"
-   ]
+   ],
+   "outputs": [
+    {
+     "output_type": "error",
+     "ename": "SyntaxError",
+     "evalue": "non-default argument follows default argument (<ipython-input-147-14594a5ca684>, line 2)",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-147-14594a5ca684>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    def dfs(graph,st=1, fr=1 , money):\u001b[0m\n\u001b[0m            ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m non-default argument follows default argument\n"
+     ]
+    }
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "def dfs(graph,st=1, fr=0, money=0):\n",
     "    if st==end : return money\n",
@@ -390,41 +441,49 @@
     "\n",
     "\n",
     "# dfs(graph)\n"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 117,
-   "metadata": {},
+   "source": [
+    "graph[3]"
+   ],
    "outputs": [
     {
+     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "[[2, 1]]"
       ]
      },
-     "execution_count": 117,
      "metadata": {},
-     "output_type": "execute_result"
+     "execution_count": 117
     }
    ],
-   "source": [
-    "graph[3]"
-   ]
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "# 5번"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 149,
-   "metadata": {},
+   "source": [
+    " k=3\t\n",
+    " num=[12, 30, 1, 8, 8, 6, 20, 7, 5, 10, 4, 1]\t\n",
+    " links=[[-1, -1], [-1, -1], [-1, -1], [-1, -1], [8, 5], [2, 10], [3, 0], [6, 1], [11, -1], [7, 4], [-1, -1], [-1, -1]]\n",
+    "links"
+   ],
    "outputs": [
     {
+     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "[[-1, -1],\n",
@@ -441,34 +500,15 @@
        " [-1, -1]]"
       ]
      },
-     "execution_count": 149,
      "metadata": {},
-     "output_type": "execute_result"
+     "execution_count": 149
     }
    ],
-   "source": [
-    " k=3\t\n",
-    " num=[12, 30, 1, 8, 8, 6, 20, 7, 5, 10, 4, 1]\t\n",
-    " links=[[-1, -1], [-1, -1], [-1, -1], [-1, -1], [8, 5], [2, 10], [3, 0], [6, 1], [11, -1], [7, 4], [-1, -1], [-1, -1]]\n",
-    "links"
-   ]
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 234,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "40"
-      ]
-     },
-     "execution_count": 234,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
     "import heapq\n",
     "## 일단 트리 만들고\n",
@@ -515,34 +555,50 @@
     "    return max(ans)\n",
     "\n",
     "solution(k,num,links)"
-   ]
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "40"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 234
+    }
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 233,
-   "metadata": {},
+   "source": [
+    "solution(2,[6,9,7,5],[[-1, -1], [-1, -1], [-1, 0], [2, 1]])"
+   ],
    "outputs": [
     {
+     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "30"
       ]
      },
-     "execution_count": 233,
      "metadata": {},
-     "output_type": "execute_result"
+     "execution_count": 233
     }
    ],
-   "source": [
-    "solution(2,[6,9,7,5],[[-1, -1], [-1, -1], [-1, 0], [2, 1]])"
-   ]
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 203,
-   "metadata": {},
+   "source": [
+    "tree.keys(), tree"
+   ],
    "outputs": [
     {
+     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "(dict_keys([4, 5, 6, 7, 8, 9]),\n",
@@ -555,47 +611,44 @@
        "              9: [7, 4]}))"
       ]
      },
-     "execution_count": 203,
      "metadata": {},
-     "output_type": "execute_result"
+     "execution_count": 203
     }
    ],
-   "source": [
-    "tree.keys(), tree"
-   ]
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 235,
-   "metadata": {},
+   "source": [
+    "for i in range(1\n",
+    "):\n",
+    "    print(i)"
+   ],
    "outputs": [
     {
-     "name": "stdout",
      "output_type": "stream",
+     "name": "stdout",
      "text": [
       "0\n"
      ]
     }
    ],
-   "source": [
-    "for i in range(1\n",
-    "):\n",
-    "    print(i)"
-   ]
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "source": [],
    "outputs": [],
-   "source": []
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "source": [],
    "outputs": [],
-   "source": []
+   "metadata": {}
   }
  ],
  "metadata": {
