--- a/HJ/tempMAC.ipynb
+++ b/HJ/tempMAC.ipynb
@@ -920,6 +920,155 @@
     }
    ],
    "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "source": [
+    "#프로그래머스 위클리 7주차\n",
+    "# from collections import OrderedDict\n",
+    "enter=[1,4,2,3]\n",
+    "leave=[2,1,4,3]\n",
+    "\n",
+    "def solution(enter, leave):\n",
+    "    answer=[0]*len(enter)\n",
+    "    room=[]\n",
+    "    idx=0\n",
+    "    for lev in leave:\n",
+    "        while lev not in room:\n",
+    "            room.append(enter[idx])\n",
+    "            idx+=1\n",
+    "        room.remove(lev)\n",
+    "        for inroom in room:\n",
+    "            answer[inroom-1]+=1\n",
+    "        answer[lev-1]+=len(room)\n",
+    "\n",
+    "    return answer\n",
+    "\n",
+    "solution(enter, leave)"
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "[2, 2, 0, 2]"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 20
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "source": [],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "source": [
+    "places=[[\"POOOP\", \"OXXOX\", \"OPXPX\", \"OOXOX\", \"POXXP\"], [\"POOPX\", \"OXPXP\", \"PXXXO\", \"OXXXO\", \"OOOPP\"], [\"PXOPX\", \"OXOXP\", \"OXPXX\", \"OXXXP\", \"POOXX\"], [\"OOOXX\", \"XOOOX\", \"OOOXX\", \"OXOOX\", \"OOOOO\"], [\"PXPXP\", \"XPXPX\", \"PXPXP\", \"XPXPX\", \"PXPXP\"],[\"OOPOO\", \"OPOOO\", \"OOOOO\", \"OOOOO\", \"OOOOO\"]]\n",
+    "\n",
+    "# places=[[\"OOOOO\", \"OOOOO\", \"OOPOO\", \"OOOOO\", \"OOOOO\"]]\n",
+    "# X:파티션, O:공석 , P:응시자\n",
+    "def solution(places):\n",
+    "    ans=[]\n",
+    "    global dx, dy\n",
+    "    dx=[0,0,1,-1]\n",
+    "    dy=[1,-1,0,0]\n",
+    "    for place in places:\n",
+    "        ans.append(check(place))\n",
+    "    return ans\n",
+    "def check(place):\n",
+    "    for i in range(5):\n",
+    "        for j in range(5):\n",
+    "            if place[i][j]=='P':\n",
+    "                try:\n",
+    "                    assert isManhatton(place,[i,j],[i,j+1])\n",
+    "                    assert isManhatton(place,[i,j],[i+1,j])\n",
+    "                    assert isManhatton(place,[i,j],[i,j-1])\n",
+    "                    assert isManhatton(place,[i,j],[i-1,j])\n",
+    "                except:\n",
+    "                    return 0\n",
+    "            else: continue\n",
+    "    return 1\n",
+    "def isManhatton(place, fr,to):# fr : 어디서왔는지 , to : 동서남북 중 어디서 3방향체크할지\n",
+    "    global dx, dy\n",
+    "    x,y=to\n",
+    "    #to check\n",
+    "    if x<0 or x>=5 or y<0 or y>=5: return True #가장자리라면? 검사ㄴㄴ\n",
+    "    else:\n",
+    "        if place[x][y]=='X': return True\n",
+    "        elif place[x][y]=='P':return False\n",
+    "\n",
+    "        #to 부터 3방향 체크\n",
+    "        else:\n",
+    "            for i in range(4):\n",
+    "                nx = x+dx[i]\n",
+    "                if nx<0 or nx>=5 : continue\n",
+    "\n",
+    "                ny = y+dy[i]\n",
+    "                if ny<0 or ny>=5 : continue\n",
+    "                if [nx,ny]==fr: continue\n",
+    "\n",
+    "                if place[nx][ny]=='P':\n",
+    "                    return False\n",
+    "        return True\n",
+    "\n",
+    "\n",
+    "# places=[[\"OOOOO\"\n",
+    "#         ,\"OOOOO\"\n",
+    "#         ,\"OOPOO\"\n",
+    "#         ,\"OOOOO\"\n",
+    "#         ,\"OOOOO\"]]\n",
+    "solution(places)\n"
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "[1, 0, 1, 1, 1, 0]"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 77
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "source": [],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "source": [],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "source": [],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "source": [],
+   "outputs": [],
+   "metadata": {}
   }
  ],
  "metadata": {
